made a change in home page

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<div class="col-md-12">
 
 						<div class="hello wow bounceInDown">
-							<h1>Hello, I'm Arunava Das</h1>
+							<h1>Arunava Das</h1>
 							<h3><span class="rotate">Digital Customer Solutions Expert | Full-stack Developer | User-experience Designer</span></h3>
 						</div>
 
