--- a/index.html
+++ b/index.html
@@ -226,16 +226,16 @@
 			                    <a href="https://twitter.com/roarkshrug" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">
 			                    <i class="fa fa-twitter-square fa-lg"></i>
 			                    </a>
-			                    </li>
+			                    <!--</li> -->
 
 			
-			                    <li class="linkedin"><a href="https://www.linkedin.com/in/arunavainsydney">
-			                  <script src="//platform.linkedin.com/in.js" type="text/javascript"></script> 
-                               <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/arunavainsydney" data-format="click"></script>
-                                <i class="fa fa-linkedin-square fa-lg"></i>
-                                </a>
-                                </li>
-							</ul>
+			                   <!-- <li class="linkedin"><a href="https://www.linkedin.com/in/arunavainsydney"> -->
+			                  <!-- <script src="//platform.linkedin.com/in.js" type="text/javascript"></script> -->
+                              <!-- <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/arunavainsydney" data-format="click"></script> -->
+                               <!-- <i class="fa fa-linkedin-square fa-lg"></i> -->
+                              <!--  </a> -->
+                            <!--    </li> -->
+							<!-- </ul> -->
 						</div>
 
 					</div><!-- .col-md-3 -->
