--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@
 							<h3>Social Profiles</h3>
 							<ul class="widget-social">
 
-								<li><a href="https://github.com/arunavagreen"><i class="fa fa-github-alt"></i></a></li>
+								<li><a href="https://github.com/arunavagreen" target="_blank"><i class="fa fa-github-alt"></i></a></li>
 								
 
 			                    <li class="twitter">
-			                    <a href="https://twitter.com/roarkshrug" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">
+			                    <a href="https://twitter.com/roarkshrug" target="_blank" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">
 			                    <i class="fa fa-twitter-square fa-lg"></i>
 			                    </a>
 			                    <!--</li> -->
@@ -714,7 +714,7 @@
 					<div class="col-md-12 headline wow bounceInLeft">
 						<h2>Contact Us</h2>
 						<p>Drop us a line or give us a ring. We love to hear you.</p>
-						<a href="https://au.linkedin.com/pub/arunava-das/7/a66/a17" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="View Arunava Das's LinkedIn profile" style="vertical-align:middle;" border="0">&nbsp;View Arunava Das's profile</span></a>
+						<a href="https://au.linkedin.com/pub/arunava-das/7/a66/a17" target="_blank" style="text-decoration:none;"><span style="font: 80% Arial,sans-serif; color:#0783B6;"><img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15" alt="View Arunava Das's LinkedIn profile" style="vertical-align:middle;" border="0">&nbsp;View Arunava Das's profile</span></a>
 					</div>
 
 					<div class="col-md-6 wow bounceInUp">
